correction adaprt value

--- a/index.html
+++ b/index.html
@@ -818,16 +818,21 @@
           </div>
           <!-- footer menu -->
           <ul class="footer__menu-tree menu-tree">
+            <!-- Pages list -->
             <li class="menu-tree__branch">
               <p>Pages</p>
               <ul class="menu-tree__bough">
+                <!-- Home link -->
                 <li class="menu-tree__leaf"><a href="#header">Home</a></li>
-                <li class="menu-tree__leaf">
+                <!-- Shop-section link -->
+								<li class="menu-tree__leaf">
                   <a href="#shop-section">Shop</a>
                 </li>
+								<!-- Store section link -->
                 <li class="menu-tree__leaf">
                   <a href="#store-section">Categories</a>
                 </li>
+								<!-- Buyers guide section link -->
                 <li class="menu-tree__leaf">
                   <a href="#buyers-guide-section">Buyer's guides</a>
                 </li>
@@ -835,6 +840,7 @@
                 <li class="menu-tree__leaf">Password</li>
               </ul>
             </li>
+            <!-- Gear categories list -->
             <li class="menu-tree__branch">
               <p>Gear categories</p>
               <ul class="menu-tree__bough">
@@ -858,6 +864,7 @@
                 </li>
               </ul>
             </li>
+            <!-- Company list -->
             <li class="menu-tree__branch">
               <p>Company</p>
               <ul class="menu-tree__bough">
@@ -871,6 +878,7 @@
                 <li class="menu-tree__leaf">Licenses</li>
               </ul>
             </li>
+            <!-- newsletter branch -->
             <li class="menu-tree__branch">
               <p>Newsletter</p>
               <ul class="menu-tree__bough">
@@ -878,12 +886,14 @@
                   Subscribe to our (infrequent) newsletter where we share news
                   about upcoming listings and projects.
                 </li>
+                <!-- newsletter email -->
                 <li class="menu-tree__leaf--newsletter">
                   <input
                     type="email"
                     class="menu-tree__email"
                     placeholder="Email"
                   />
+                  <!-- newsletter buttton -->
                   <input
                     type="button"
                     value="submit"
